# typio

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  test_skia_size.cc  typio_build_config.h.in
.kimi/: AGENTS.md
.opencode/: AGENTS.md
build-gtk/: typio.pc  typio_build_config.h
build-headless/: typio.pc  typio_build_config.h
cmake/: WaylandProtocol.cmake  skia.cmake  typio.pc.in
data/: typio.conf.example  (+2 more)
src/apps/daemon/: CMakeLists.txt  app.c  app.h  cli.c  dbus_helpers.h  main.c
src/apps/daemon/status/: status.c  status.h
src/apps/daemon/tray/: tray_internal.h
src/apps/daemon/voice/: pw_capture.c  voice_engine.h  voice_engine_sherpa.c  voice_engine_whisper.c  voice_sherpa.c
src/apps/daemon/wayland/: boundary_bridge.c  candidate_popup.c  candidate_popup_buffer.c  candidate_popup_buffer.h  candidate_popup_damage.c  candidate_popup_layout.c  candidate_popup_layout.h  candidate_popup_paint.c  candidate_popup_paint.h  candidate_popup_render_state.c  candidate_popup_render_state.h  candidate_popup_state.c  candidate_popup_state.h  candidate_popup_theme.c  candidate_popup_theme.h  identity.c  identity.h  key_arbiter.c  key_debug.c  key_route.c  key_route.h  key_tracking.c  key_tracking.h  key_tracking_access.h  keyboard_repeat.c  lifecycle.h  lifecycle_model.c  modifier_policy.c  skia_backend.cc  skia_engine.cc  text_ui_backend.h  vk_bridge.c  vk_bridge.h  wl_frontend.c  wl_frontend.h  wl_frontend_internal.h  wl_input_method.c  wl_keyboard.c  xkb_modifiers.h
src/apps/typio/: CMakeLists.txt  cli.h  client_main.c  client_main.h  main.c
src/apps/typio/notify/: notifications.c  notifications.h
src/apps/typio/status/: status.c
src/apps/typio/tray/: bus.c  icon_pixmap.cc  icon_pixmap.h  sni.c  tray.h
src/apps/typio/voice/: voice_engine.h  voice_engine_sherpa.c  voice_engine_whisper.c  voice_service.c  voice_sherpa.c
src/apps/typio/wayland/: aux_adapters.c  aux_adapters.h  aux_handler.c  aux_handler.h  candidate_guard.c  candidate_popup.cc  candidate_popup_buffer.c  candidate_popup_buffer.h  candidate_popup_layout.cc  candidate_popup_layout.h  candidate_popup_paint.cc  candidate_popup_paint.h  candidate_popup_theme.c  candidate_popup_theme.h  flux_renderer.c  flux_renderer.h  identity.c  key_route.c  keyboard_repeat.c  keyboard_xkb.c  keyboard_xkb.h  lifecycle.c  lifecycle.h  lifecycle_model.c  repeat_guard.c  shortcut_chord.c  shortcut_config.c  skia_backend.cc  skia_engine.cc  text_ui_backend.h  vk_bridge.c  wl_event_loop.c  wl_frontend.c  wl_frontend.h  wl_frontend_internal.h  wl_input_method.c  wl_keyboard.c  wl_runtime_config.c  wl_trace.c  wl_trace.h  (+1 more)
src/client/: CMakeLists.txt
src/control/: CMakeLists.txt  control_bind.c  control_bind.h  control_config.c  control_internal.h  control_models.c  control_ui.c  control_widgets.c  control_widgets.h  control_window.c  main.c  typio-control.css
src/core/: CMakeLists.txt
src/core/include/typio/: config_schema.h  dbus_protocol.h  engine.h  engine_manager.h  instance.h  renderer.h  types.h  typio.h
src/core/runtime/: build_info.c  config.c  config_schema.c  engine.c  engine_label.c  engine_manager.c  input_context.c  instance.c  rime_schema_list.c
src/core/utils/: arena.c  arena.h  list.h  log.c  log.h  memory.h  result.c  result.h
src/engines/mozc/: CMakeLists.txt  mozc_engine.cc
src/engines/mozc/proto/: mozc_commands.proto
src/engines/rime/: CMakeLists.txt  path_expand.c  rime_config.c  rime_deploy.c  rime_engine.c  rime_internal.h  rime_mode.c  rime_sync.c
src/lib/: CMakeLists.txt
src/lib/core/: config.c  config_schema.c  engine.c  engine_manager.c  event.c  input_context.c  instance.c  rime_schema_list.c
src/lib/typio/: build_info.h  config.h  config_schema.h  dbus_protocol.h  engine.h  engine_label.h  engine_manager.h  event.h  input_context.h  instance.h  rime_schema_list.h  types.h  typio.h
src/lib/utils/: list.c  list.h  log.c  log.h  string.c  string.h
src/server/: CMakeLists.txt  dbus_helpers.h  main.c  server_app.c  server_app.h  server_cli.c  server_cli.h
src/server/notify/: health.c  health.h
src/server/status/: status.c  status.h
src/server/tray/: bus.c  icon_pixmap.c  icon_pixmap.h  sni.c  tray.h  tray_internal.h
src/server/voice/: pw_capture.c  pw_capture.h  voice_backend.h  voice_engine_sherpa.c  voice_engine_whisper.c  voice_service.c  voice_service.h  voice_whisper.c
src/server/wayland/: boundary_bridge.c  boundary_bridge.h  candidate_guard.h  candidate_popup.c  candidate_popup_damage.h  candidate_popup_layout.c  candidate_popup_layout.h  candidate_popup_paint.c  candidate_popup_paint.h  candidate_popup_render_state.c  candidate_popup_render_state.h  identity.c  identity.h  inline_ui.c  inline_ui.h  key_arbiter.c  key_route.c  key_route.h  key_tracking.c  key_tracking.h  key_tracking_access.h  keyboard_repeat.c  lifecycle.c  lifecycle.h  lifecycle_model.c  modifier_policy.h  monotonic_time.h  popup.c  popup_damage.c  popup_damage.h  popup_render_state.c  popup_render_state.h  popup_state.c  popup_state.h  preedit_format.c  preedit_format.h  repeat_guard.c  repeat_guard.h  shortcut_chord.c  shortcut_chord.h  (+16 more)
tests/: CMakeLists.txt  manual_test.c  test_basic_compose.c  test_boundary_bridge.c  test_candidate_guard.c  test_candidate_popup_damage.c  test_candidate_popup_layout.c  test_candidate_popup_render_state.c  test_candidate_popup_state.c  test_config.c  test_config_schema.c  test_core.c  test_engine_manager.c  test_identity.c  test_inline_ui.c  test_input_method.c  test_key_arbiter.c  test_key_route.c  test_key_tracking.c  test_lazy_engine_plugin.c  test_lifecycle.c  test_modifier_policy.c  test_popup_damage.c  test_popup_render_state.c  test_popup_state.c  test_recent_log_dump.c  test_repeat_guard.c  test_rime_engine.c  test_rime_path_expand.c  test_rime_schema_list.c  test_server_app.c  test_shortcut_chord.c  test_startup_guard.c  test_startup_health.c  test_status_bus.c  test_text_ui_state.c  test_tray_icon_pixmap.c  test_vk_bridge.c
tests/integration/: mock_compositor.c  mock_compositor.h  test_basic_flow.c
(+157 files in other folders)
